--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,40 @@
+# Minimum CMake required
 cmake_minimum_required(VERSION 3.20)
-project(gRPC_exercise)
+project(gRPC_exercise VERSION 0.0.1 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_BUILD_TYPE RelWithDebInfo)
 
-message(STATUS "cmake started")
+set(protobuf_MODULE_COMPATIBLE TRUE)
+find_package(Protobuf CONFIG REQUIRED)
+message(STATUS "Using protobuf ${Protobuf_VERSION}")
+
+set(_PROTOBUF_LIBPROTOBUF protobuf::libprotobuf)
+set(_REFLECTION gRPC::grpc++_reflection)
+if(CMAKE_CROSSCOMPILING)
+    find_program(_PROTOBUF_PROTOC protoc)
+else()
+    set(_PROTOBUF_PROTOC $<TARGET_FILE:protobuf::protoc>)
+endif()
+
+# Find gRPC installation
+# Looks for gRPCConfig.cmake file installed by gRPC's cmake installation.
+find_package(gRPC CONFIG REQUIRED)
+message(STATUS "Using gRPC ${gRPC_VERSION}")
+
+set(_GRPC_GRPCPP gRPC::grpc++)
+if(CMAKE_CROSSCOMPILING)
+    find_program(_GRPC_CPP_PLUGIN_EXECUTABLE grpc_cpp_plugin)
+else()
+    set(_GRPC_CPP_PLUGIN_EXECUTABLE $<TARGET_FILE:gRPC::grpc_cpp_plugin>)
+endif()
 
 set(ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
-set(SERVER_DIR "${ROOT_DIR}/server")
-include_directories(${SERVER_DIR})
-add_subdirectory(${SERVER_DIR})
+set(EXAMPLE_DIR "${ROOT_DIR}/greetings")
+include_directories(${EXAMPLE_DIR})
+add_subdirectory(${EXAMPLE_DIR})
+
+find_package(Threads)
 
 add_executable(gRPC_exercise main.cpp)
-target_link_libraries(gRPC_exercise PUBLIC server)
+target_link_libraries(gRPC_exercise PUBLIC target Threads::Threads)
